--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "@types/node": "^12.20.27",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.0",
+    "axios": "^0.22.0",
+    "axios-typescript-response": "^1.0.5",
+    "emoji-mart": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
+    "sass": "^1.42.1",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
