--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "axios": "^0.22.0",
     "axios-typescript-response": "^1.0.5",
     "emoji-mart": "^3.0.1",
+    "firebase": "^9.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "reselect": "^4.0.0",
     "sass": "^1.42.1",
+    "sha1": "^1.1.1",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
@@ -46,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/sha1": "^1.1.3"
   }
 }
