--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.3.0",
     "axios": "^0.22.0",
     "axios-typescript-response": "^1.0.5",
+    "boxicons": "^2.0.9",
     "emoji-mart": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
