--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-toastify": "^8.0.3",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "sass": "^1.42.1",
     "sha1": "^1.1.1",
